@@ -4,6 +4,7 @@ cdef extern from "stdio.h":
     ctypedef struct FILE
     cdef int strlen(char* s)
     cdef int strcmp(char* s1, char* s2)
+    cdef int strncmp(char* s1, char* s2, int len)
     
 cdef extern from "libxml/encoding.h":
     ctypedef struct xmlCharEncodingHandler
